# dag-bench

./: .gitignore  PROJECTS.md  README.md  check_compatibility_all.py  duckcsv.py  normalize_sf.py  prepare.py  projects.yaml  report.html  report.py  translate.py
dbgen/: Cargo.toml  __init__.py  p01_ecommerce.py  p02_fraud.py  p03_iot.py  p04_hr.py  p05_logistics.py  p06_saas.py  p07_healthcare.py  p08_adtech.py  p09_gaming.py  p10_energy.py  project_runner.py
dbgen-rust/: Cargo.toml
dbgen-rust/src/: check_error.rs  main.rs  p01_ecommerce.rs  p02_fraud.rs  p03_iot.rs  p04_hr.rs  p05_logistics.rs  p06_saas.rs  p07_healthcare.rs  p08_adtech.rs  p09_gaming.rs  p10_energy.rs
dbgen/src/: main.rs  p01_ecommerce.rs  p08_adtech.rs  p09_gaming.rs
dbt_bench/: dbt_project.yml
dbt_bench/models/bench/: m1.sql  m2.sql  m3.sql  s1.sql
obselete/tpcdi/: load_postgres.py  profiles.yml  setup_duckdb.py
projects/_shared/: bootstrap_postgres.sql  postgres_bench_utils.py
projects/gym/: dbt_project.yml  generate_data.py  load_postgres.py  profiles.yml
projects/synth/: README.md  generate_data.py  run_all.sh
projects/tpcdi/: .gitignore  dbt_project.yml  load_postgres.py  profiles.yml
projects/tpcds/: dbt_project.yml  generate_data.py  load_postgres.py  profiles.yml
projects/tpch/: dbt_project.yml  load_postgres.py  profiles.yml
queries/tpch/: tpch_q12.sql  tpch_q13.sql  tpch_q15.sql  tpch_q17.sql  tpch_q3.sql  tpch_q6.sql  tpch_q8.sql
queries/zhou07/: zhou07_q8.sql  zhou07_q9.sql
tpch_dag/: dbt_project.yml
utils/: postgres_bench_utils.py  synth_utils.py
(+706 files in other folders)
