[package]
name = "dbgen-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.1.1", features = ["bundled", "chrono"] }
rayon = "1.10"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

[profile.release]
debug = true

